include references to instance API
