# src/api.yaml
@@ -135,4 +135,53 @@ paths:
         '200':
           description: backup logs for a specific backup run, streamed
           content:
-            image/png: {}
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: './schemas.yaml#/components/schemas/Log'
+  /admin/configs:
+    post:
+      description: create a new device config
+      requestBody:
+        description: information for new device config
+        content:
+          application/json:
+            schema:
+              $ref: 'https://raw.githubusercontent.com/databacker/api/refs/heads/main/src/schemas.yaml#/components/schemas/Config'
+      responses:
+        '201':
+          description: successfully created config
+          content:
+            application/json:
+              schema:
+                $ref: 'https://raw.githubusercontent.com/databacker/api/refs/heads/main/src/schemas.yaml#/components/schemas/Config'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
+  /admin/configs/{config}:
+    get:
+      description: get information about a specific device config
+      parameters:
+        - in: path
+          name: config
+          schema:
+            type: string
+          required: true
+          description: Unique ID of the config to retrieve
+      responses:
+        '404':
+          description: config not found
+        '200':
+          description: details of the config
+          content:
+            application/json:
+              schema:
+                $ref: 'https://raw.githubusercontent.com/databacker/api/refs/heads/main/src/schemas.yaml#/components/schemas/Config'
